--- a/Index.html
+++ b/Index.html
@@ -29,12 +29,12 @@
 
 <!-- body content -->
 
-<body style="background-color: var(--White)">
+<body style="background-color: var(--Orange)">
  
 
 
 
-  
+
 
 </body>
 </html>
