--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="Description" content="" />
-  <title>Prestige Athletics</title>
+  <title></title>
   <link rel="icon" href="./Photos/Logos/Logo.png" />
 
   <!-- This is the link to tailwinds css! -->
@@ -44,7 +44,7 @@
             <div class="flex items-center justify-between w-full md:w-auto">
               <a href="#">
                 <span class="sr-only">Workflow</span>
-                <img class="md:h-16 w-auto h-10" src="./Photos/Logos/logo.png">
+                <img class="md:h-20 w-auto h-10" src="./Photos/Logos/logo.png">
               </a>
               <div class="-mr-2 flex items-center md:hidden">
                 <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
@@ -57,16 +57,16 @@
               </div>
             </div>
           </div>
-          <div class="pt-6 hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-            <a href="./TrainingCamps.html" class="font-medium text-gray-500 hover:text-gray-900">Camps</a>
+          <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
+            <a href="./TrainingCamps.html" class="font-medium text-gray-500 hover:text-gray-900">Training Camps</a>
 
             <a href="./Articles.html" class="font-medium text-gray-500 hover:text-gray-900">Articles</a>
 
-            <a href="./PersonalTraining.html" class="font-medium text-gray-500 hover:text-gray-900">Training</a>
+            <a href="./PersonalTraining.html" class="font-medium text-gray-500 hover:text-gray-900">Personal Training</a>
 
             <a href="./Coaches.html" class="font-medium text-gray-500 hover:text-gray-900">Coaches</a>
 
-            <a href="./FAQS.html" style="color: var(--Orange);" class="font-medium  hover:text--500">FAQS</a>
+            <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Log in</a>
           </div>
         </nav>
       </div>
@@ -115,21 +115,21 @@
       <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
         <div class="sm:text-center lg:text-left">
           <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-            <span class="block xl:inline">Train like</span>
-            <span style="color: var(--LightOrange);" class="block">Never Before</span>
+            <span class="block xl:inline">Data to enrich your</span>
+            <span class="block text-indigo-600 xl:inline">online business</span>
           </h1>
           <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-            Here at Prestige Athletics, our players get trained by the best trainers in Southeast Missouri. Join us and see why our players come out on top.
+            Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
           </p>
           <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
             <div class="rounded-md shadow">
-              <a href="#" style="background-color: var(--Black);" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white  hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
-                View Camps
+              <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
+                Get started
               </a>
             </div>
             <div class="mt-3 sm:mt-0 sm:ml-3">
-              <a href="#" style="background-color: var(--LightGrey);" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md  md:py-4 md:text-lg md:px-10">
-                Purchase Training
+              <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
+                Live demo
               </a>
             </div>
           </div>
@@ -138,7 +138,7 @@
     </div>
   </div>
   <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-    <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="./Photos/Stock/Centerfold.jpg">
+    <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixqx=cdhkZNQJCY&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
   </div>
 </div>
 
